--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   lottie: ^0.7.0+1
   curved_navigation_bar: ^0.3.4
+  http: ^0.12.2
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
