--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   lottie: ^0.7.0+1
   curved_navigation_bar: ^0.3.4
+  geolocator: ^6.1.5
+  geocoder: ^0.2.1
   http: ^0.12.2
   cupertino_icons: ^0.1.3
 
