--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   geolocator: ^6.1.5
   geocoder: ^0.2.1
   http: ^0.12.2
+  flutter_easyloading: ^2.0.1
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
