--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   http: ^0.12.2
   flutter_easyloading: ^2.0.1
   cupertino_icons: ^0.1.3
+  syncfusion_flutter_charts: ^18.3.51
 
 dev_dependencies:
   flutter_test:
